--- a/web_project/templates/index.html
+++ b/web_project/templates/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width = device-width, inital-scale =1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
     <title>Leaflet Geoproject</title>
     <style>
         #map {
@@ -16,8 +16,7 @@
     </style>
 </head>
 
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
 <body>
     <div id="map"></div>
@@ -26,9 +25,13 @@
 </body>
 
 </html>
+
+<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
     //aşağıda yer alan setview içindeki tırnaklı yer, gösterilecek yerin koordinatları yer alır. tırnağın yanındaki 7 ise yakınlaştırmayı gösteirr.
     var map = L.map('map').setView([38.9637, 35.2433], 7);
+    map.zoomControl.setPosition('topright')
 
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
@@ -53,5 +56,6 @@
     map.on('mousemove', function(e) {
         console.log(e)
         $('.coordinate').html('Lat: ${e.latlng.lat} Lng: ${e.latlng.lng}')
+        
     })
 </script>
