--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -1,14 +1,15 @@
 body{}
-
+/* SAYFA GENEL YAPISI */
 #header{
     border-radius: 50px;
     width: 100%;
-    height: 100px;
+    height: 70px;
     /* height özelliği kaldırılmalı */
 }
 #main_title{
+    position: absolute;
     float: left;
-    width: 72%;
+    width: 100%;
     height: 100%;
 }
 .background{
@@ -16,25 +17,23 @@ body{}
     background-image: url("../static/background.jpg");
     background-repeat: no-repeat;
     background-size:100%;
-    width: 80%;
+    width: 95%;
     position: absolute;
-    height: 100px;
+    height: 70px;
     opacity: 0.3;
 }
-
 #main_head{
     position: relative;
     color: rgb(255, 255, 255);
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 30pt;
     font-weight:bolder;
     text-align:center;
-    width: auto;
-    margin-top: 01.8%;
-    margin-left: 20%;
-    
+    width: 95%;
+    height: 70px;
+    margin-top: 0.7%;
 }
 .logo2{
+    position: relative;
     border-radius: 50px;
     float: right;
     width: 15%;
@@ -42,6 +41,7 @@ body{}
     padding-right: 2%;
 }
 .logo3{
+    position: relative;
     margin-top: 5%;
     float: right;
     height: 70%;
@@ -51,10 +51,10 @@ body{}
     opacity: 0.6;
     background-color: hsl(0, 5%, 74%);
     width: 100%;
-    height: 60px;
+    height: 30px;
 }
 #homepage,#gis_view,#about_us,#contact{
-    height: 60px;
+    height: 100%;
     float: left;
     width: 25%;
     text-align: center;
@@ -62,8 +62,9 @@ body{}
     font-weight: bolder;
     font-size: 25px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding-top: 0.8%;
+    padding-top: 0%;
 }
+/* ANA SAYFA İLE İLGİLİ KISIMLAR */
 #container{
     margin-top: 20px;
     width: 100%;
@@ -93,6 +94,7 @@ body{}
     width: 84%;
     height: auto;
 }
+/* SAYFA SONU */*
 #footer{
     background-color: aliceblue;
     opacity: 0.9;
@@ -100,7 +102,6 @@ body{}
     margin-top: 1%;
     float: left;
     width: 100%;
-
 }
 #altyazi{
     float: left;
@@ -108,4 +109,16 @@ body{}
     font-size: large;
     font-family: 'Times New Roman', Times, serif;
     font-weight: bolder;
+}
+
+/* CBS ARAYÜZÜ İLE İLGİLİ KISIMLAR */
+#map_view{
+    border-radius: 50px;
+    background-color: aliceblue;
+    opacity: 0.2;
+    width: 99%;
+    height: 1000px;
+    margin-top: 1%;
+    margin-left: 0.5%;
+
 }
