--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -53,7 +53,40 @@ body{}
     width: 100%;
     height: 30px;
 }
-#homepage,#gis_view,#about_us,#contact{
+#homepage{
+    height: 100%;
+    float: left;
+    width: 25%;
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 0%;
+}
+#gis_view{
+    height: 100%;
+    float: left;
+    width: 25%;
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 0%;
+}
+#about_us{
+    height: 100%;
+    float: left;
+    width: 25%;
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding-top: 0%;
+}
+#contact{
     height: 100%;
     float: left;
     width: 25%;
@@ -112,13 +145,38 @@ body{}
 }
 
 /* CBS ARAYÜZÜ İLE İLGİLİ KISIMLAR */
+#ust_sekme{
+    width: 100%;
+    height: 20px;
+}
+#backupbutton{
+float: left;
+    float: left;
+    opacity: 1;
+    height: 20px;
+}
 #map_view{
-    border-radius: 50px;
-    background-color: aliceblue;
-    opacity: 0.2;
+    border-radius: 20px;
     width: 99%;
     height: 1000px;
-    margin-top: 1%;
+    margin-top: 20px;
     margin-left: 0.5%;
-
+}
+#map_view:before{
+    opacity: 1;
+}
+#map_ust_sekme{
+    float: left;
+    width: 99%;
+    height: 30px;
+    background-color: black;
+    margin-top: -0.4%;
+    margin-left: 0.5%;
+}
+#nokta{
+    color: black;
+    border-radius: 10px;
+    width: 5%;
+    height: 50px;
+    font-size: large;
 }
