--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -146,37 +146,128 @@ body{}
 
 /* CBS ARAYÜZÜ İLE İLGİLİ KISIMLAR */
 #ust_sekme{
-    width: 100%;
-    height: 20px;
+    position: absolute;
+    background-color: beige;
+    width: 98.5%;
+    height: 50px;
+    opacity: 0.5;
 }
-#backupbutton{
-float: left;
+
+#backbutton{
     float: left;
-    opacity: 1;
-    height: 20px;
+    position: relative;
+    background-color: black;
+    background-image: url("../static/back.png");
+    background-repeat: no-repeat;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
+}
+#nokta{
+    position: relative;
+    float: left;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
+}
+#cizgi{
+    float: left;
+    position: relative;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
+}
+#shp_al{
+    position: relative;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
+}
+#sec{
+    float: left;
+    position: relative;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
+}
+#shpgonder{
+    float: left;
+    position: relative;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
+}
+#cokgen{float: left;
+    position: relative;
+    color: black;
+    border-radius: 10px;
+    width: 75px;
+    height: 50px;
+    font-size: large;
 }
 #map_view{
     border-radius: 20px;
     width: 99%;
-    height: 1000px;
-    margin-top: 20px;
+    height: auto;
+    margin-top: 50px;
     margin-left: 0.5%;
 }
-#map_view:before{
-    opacity: 1;
-}
-#map_ust_sekme{
-    float: left;
-    width: 99%;
-    height: 30px;
-    background-color: black;
-    margin-top: -0.4%;
-    margin-left: 0.5%;
-}
-#nokta{
+#katmanlar{
+    margin-top: -40px;
     color: black;
+    background-color: beige ;
+    border: 5px solid black;
+    width: 15%;
+    height: 500px;
     border-radius: 10px;
-    width: 5%;
-    height: 50px;
-    font-size: large;
+    margin-left: -15px;
+    opacity: 0.7;
+}
+#rasterlar{
+    color: black;
+    background-color: beige ;
+    border: 5px solid black;
+    width: 15%;
+    height: 310px;
+    border-radius: 10px;
+    margin-left: -15px;
+    opacity: 0.7;
+}
+#map_arkaplan{
+    border-style: solid;
+    border-color: black;
+    color: black;
+    background-image: url("../static/logo.png");
+    background-repeat: no-repeat;
+    background-position:center;
+    background-color: aliceblue;
+    opacity: 0.4;
+    width: 85%;
+    height: 817px;
+    margin-left: 255px;
+    margin-top: -825px;
+    float: left;
+
+}
+#harita{
+    border: 5px solid;
+    color: black;
+    width: 85%;
+    height: 817px;
+    margin-left: 255px;
+    margin-top: -825px;
+    float: left;
+
 }
