--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -1,5 +1,8 @@
 body{}
 /* SAYFA GENEL YAPISI */
+*{
+    font-family: 'fantasy','papyrus';
+}
 #header{
     border-radius: 50px;
     width: 100%;
@@ -146,16 +149,23 @@ body{}
 
 /* CBS ARAYÜZÜ İLE İLGİLİ KISIMLAR */
 #ust_sekme{
+    z-index: 1;
+    width: 99%;
     position: absolute;
-    background-color: beige;
-    width: 98.5%;
-    height: 50px;
-    opacity: 0.5;
-}
-
-#backbutton{
     float: left;
-    position: relative;
+}
+#ust_sekme_saydam{
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.397);
+    width: 100%;
+    height: 50px;
+    opacity: 1;
+    position: absolute;
+    float: left;
+}
+#backbutton{
+    z-index: 1;
+    float: left;
     background-color: black;
     background-image: url("../static/back.png");
     background-repeat: no-repeat;
@@ -163,111 +173,190 @@ body{}
     border-radius: 10px;
     width: 75px;
     height: 50px;
-    font-size: large;
-}
-#nokta{
     position: relative;
-    float: left;
-    color: black;
-    border-radius: 10px;
-    width: 75px;
-    height: 50px;
     font-size: large;
-}
-#cizgi{
-    float: left;
-    position: relative;
-    color: black;
-    border-radius: 10px;
-    width: 75px;
-    height: 50px;
-    font-size: large;
-}
-#shp_al{
-    position: relative;
-    color: black;
-    border-radius: 10px;
-    width: 75px;
-    height: 50px;
-    font-size: large;
-}
-#sec{
-    float: left;
-    position: relative;
-    color: black;
-    border-radius: 10px;
-    width: 75px;
-    height: 50px;
-    font-size: large;
-}
-#shpgonder{
-    float: left;
-    position: relative;
-    color: black;
-    border-radius: 10px;
-    width: 75px;
-    height: 50px;
-    font-size: large;
-}
-#cokgen{float: left;
-    position: relative;
-    color: black;
-    border-radius: 10px;
-    width: 75px;
-    height: 50px;
-    font-size: large;
-}
-#map_view{
-    border-radius: 20px;
-    width: 99%;
-    height: auto;
-    margin-top: 50px;
-    margin-left: 0.5%;
-}
-#katmanlar{
-    margin-top: -40px;
-    color: black;
-    background-color: beige ;
-    border: 5px solid black;
-    width: 15%;
-    height: 500px;
-    border-radius: 10px;
-    margin-left: -15px;
+    cursor: pointer;
     opacity: 0.7;
 }
-#rasterlar{
-    color: black;
-    background-color: beige ;
-    border: 5px solid black;
-    width: 15%;
-    height: 310px;
+#objeolustur{
+    position: relative;
+    float: left;
     border-radius: 10px;
-    margin-left: -15px;
-    opacity: 0.7;
+    text-align: center;
+    position: relative;
+    width: 75px;
+    height: 50px;
+    background-color: black;
+    list-style:none;
+    cursor:pointer;
+    list-style: none;
+    z-index: 2;
+    opacity: 0.8;
 }
-#map_arkaplan{
-    border-style: solid;
-    border-color: black;
-    color: black;
+#verial{
+    position: relative;
+    float: left;
+    border-radius: 10px;
+    text-align: center;
+    position: relative;
+    width: 85px;
+    height: 50px;
+    background-color: black;
+    list-style:none;
+    cursor:pointer;
+    list-style: none;
+    z-index: 2;
+    opacity: 0.8;
+}
+.acilirbuton{
+    z-index: 1;
+    position: relative;
+    background-color: black;
+    font-size: medium;
+    color: aliceblue;
+    border-radius: 10px;
+    opacity: 0.8;
+    margin: 4   px;
+    width: 75px;
+    height: 50px;
+}
+#map_vieww{
+    position: absolute;
+    opacity: 0.3;
+    z-index: -1;
     background-image: url("../static/logo.png");
     background-repeat: no-repeat;
+    background-size: contain;
     background-position:center;
-    background-color: aliceblue;
-    opacity: 0.4;
-    width: 85%;
-    height: 817px;
-    margin-left: 255px;
-    margin-top: -825px;
-    float: left;
-
+    width: 99%;
+    height: 820px;
 }
-#harita{
-    border: 5px solid;
+#map_view{
+    float: left;
+    margin-top: 60px;
+    opacity: 1;
+    z-index: -1;
+    width: 99.5%;
+    height:830px;
+}
+#sekmeler{
+    text-align: center;
+    position: relative;
+    z-index: 0;
+    font-weight: bold;
+}
+#vektor{
+    border: solid black;
+    position: relative;
+    background-color: wheat;
+    z-index: 0;
+    width: 10%;
+    height: 3%;
+    border-radius: 10px;
+    font-weight: bolder;
+    opacity:0.7;
     color: black;
-    width: 85%;
-    height: 817px;
-    margin-left: 255px;
-    margin-top: -825px;
-    float: left;
-
+    list-style: none;
 }
+#vektoryazi{
+    z-index: 0;
+    color: black;
+    cursor: pointer;
+    list-style: none;
+}
+#katmanlarvektor{
+    z-index: 0;
+    position: relative;
+    color: black;
+    background-color: wheat ;
+    width: 100%;
+    height: 500px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-top: 5px;
+    opacity: 0.7;
+}
+#raster{
+    border: solid black;
+    position: relative;
+    background-color: wheat;
+    z-index: 0;
+    width: 10%;
+    height: 3%;
+    border-radius: 10px;
+    font-weight: bolder;
+    opacity:0.7;
+    color: black;
+    list-style: none;
+}
+#rasteryazi{
+    z-index: 0;
+    color: black;
+    cursor: pointer;
+    list-style: none;
+}
+#katmanlarraster{
+    z-index: 0;
+    position: relative;
+    color: black;
+    background-color: wheat ;
+    width: 100%;
+    height: 270px;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-top: 5px;
+    opacity: 0.7;
+}
+#sag_sekme{
+    text-align: center;
+
+    z-index: 0;
+    font-weight: bold;
+    float: right;
+    width: 10%;
+    margin-top: -835px;
+}
+#araclar{
+    border: solid black;
+
+    background-color: wheat;
+    z-index: 0;
+    width: 100%;
+    height: 3%;
+    border-radius: 10px;
+    font-weight: bolder;
+    opacity:0.7;
+    color: black;
+    list-style: none;
+}
+#araclar2{
+    width: 100%;
+    z-index: 0;
+    color: black;
+    cursor: pointer;
+    list-style: none;
+}
+#sekme_araclar{
+    z-index: 0;
+    color: black;
+    background-color: wheat ;
+    width: 100%;
+    height: 270px;
+    border-radius: 10px;
+    margin-top: 5px;
+    opacity: 0.7;
+}
+#haritaa{
+    z-index: -1;
+    background-image: url(https://www.nationsonline.org/maps/turkey-map.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    border:  solid black 10px;
+    width: 98.5%;
+    height: 920px;
+    position: absolute;
+    margin-top:50px;
+    margin-left: -5px;
+}
+
+
