--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -191,7 +191,7 @@ body{
     font-family: 'Courier New', Courier, monospace;
     background-color: unset;
     position: absolute;
-    width: auto;
+    width: 300px;
     height: 50px;
     text-align: center;
     color: white;
@@ -364,7 +364,7 @@ body{
     opacity: 0.7;
 }
 #map_screen{
-    background-color:white;
+    background-color:unset;
     z-index: 0;
     width: 100.1%;
     height: 1010px;
