--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -188,15 +188,20 @@ body{
     opacity: 0.7;
 }
 #sayfamesajlari{
+    border-radius: 20px;
     font-family: 'Courier New', Courier, monospace;
     background-color: unset;
     position: absolute;
-    width: 300px;
-    height: 50px;
+    width: auto;
+    height: auto;
     text-align: center;
     color: white;
     font-size: large;
-    margin-left: 25%;
+    margin-left: 22.5%;
+    padding: 0.6%;
+    float: left;
+    opacity: 0.7;
+    margin-top: 0.2%;
 }
 #create_object{
     position: relative;
