--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -302,6 +302,7 @@ body{
     margin-left: auto;
     margin-top: 5px;
     opacity: 0.7;
+    overflow-y: scroll;
 }
 #raster{
     border: solid black;
