--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -189,20 +189,21 @@ body{
     opacity: 0.7;
 }
 #sayfamesajlari{
-    border-radius: 20px;
+    margin-top: 0px;
+    left: 50%;
+    transform: translate(-50%);
+    z-index: 3;
+    position: fixed;
+    border-radius: 10px;
     font-family: 'Courier New', Courier, monospace;
     background-color: unset;
-    position: absolute;
-    width: 400px;
+    width: auto;
     height: auto;
     text-align: center;
     color: white;
     font-size: large;
-    margin-left: 15%;
-    padding: 0.6%;
-    float: left;
     opacity: 0.7;
-    margin-top: 0.2%;
+    
 }
 .semboller{
     height: 25px;
@@ -316,6 +317,7 @@ body{
     margin-top: 5px;
     opacity: 0.7;
     overflow-y: scroll;
+    
 }
 #raster{
     border: solid black;
