öznitelik görüntüleme eklendi

--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -453,4 +453,10 @@ body{
     color: wheat;
     margin: 2px;
 }
-
+#oznitelikpenceresi{
+    width: 900px;
+    height: 200px;
+    position: absolute;
+    margin-top: 780px;
+    margin-left: 500px;
+}
