ÖZNİTELİK GÜNCELLEME İŞLEVLERİ EKLENDİ

--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -202,7 +202,7 @@ body{
     text-align: center;
     color: white;
     font-size: large;
-    opacity: 0.7;
+    opacity: 0.85;
     
 }
 .semboller{
@@ -454,9 +454,9 @@ body{
     margin: 2px;
 }
 #oznitelikpenceresi{
-    width: 900px;
-    height: 200px;
+    width: auto;
+    height: 220px;
     position: absolute;
-    margin-top: 780px;
+    margin-top: 750px;
     margin-left: 500px;
 }
