--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -103,8 +103,8 @@
 /* ANA SAYFA İLE İLGİLİ KISIMLAR */
 #container{
     position: static;
-    width: 95%;
-    height: 500px;
+    width: 100%;
+    height: 750px;
     overflow: hidden;
 }
 #updates_and_news{
@@ -124,19 +124,23 @@
     list-style-type:lower-roman;
 }
 #images{
-    background-color: aliceblue;
-    opacity: 0.5;
-    border-radius: 25px;
+    position: relative;
     float: right;
-    width: 84%;
-    height: auto;
+    overflow-y: scroll;
+    border-radius: 25px;
+    width: 78%;
+    height: 100%;
+}
+.new_image{
+    height: 100%;
+    
 }
 /* SAYFA SONU */*
 #footer{
     background-color: aliceblue;
     opacity: 0.7;
     border-radius: 25px;
-    margin-top: 15%;
+    margin-top: 20px  ;
     float: left;
     width: 100%;
 }
