--- a/HTML-CSS-JS/css/layout.css
+++ b/HTML-CSS-JS/css/layout.css
@@ -111,7 +111,7 @@
     border-radius: 25px;
     background-color: aliceblue;
     opacity: 0.7;
-    color: rgb(255, 0, 0);
+    color:black ;
     float: left;
     width: 20%;
     height: auto;
